debhelper (8.9.1) UNRELEASED; urgency=low

  * Typo fixes. Closes: #632662
  * dh: In v9, do not enable any python support commands. Closes: #634106

 -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400

debhelper (8.9.0) unstable; urgency=low

  * dh: In v9, any standard rules file targets, including build-arch,
    build-indep, build, install, etc, can be defined in debian/rules
    without needing to explicitly tell make the dependencies between
    the targets. Closes: #629139
    (Thanks, Roger Leigh)
  * dh_auto_configure: In v9, does not include the source package name
    in --libexecdir when using autoconf. Closes: #541458
  * dh_auto_build, dh_auto_configure, dh: Set environment variables
    listed by dpkg-buildflags --export. Any environment variables that
    are already set to other values will not be changed.
    Closes: #544844
  * dh_movefiles: Optimise use of xargs. Closes: #627737
  * Correct docs about multiarch and v9. Closes: #630826
  * Fix example. Closes: #627534
  * Fix error message. Closes: #628053
  * dh_auto_configure: If there is a problem with cmake, display
    the CMakeCache.txt.

 -- Joey Hess <joeyh@debian.org>  Fri, 24 Jun 2011 14:28:52 -0400

debhelper (8.1.6) unstable; urgency=low

  * dh_ucf: Fix missing space before ']'s in postrm autoscript.

 -- Joey Hess <joeyh@debian.org>  Thu, 28 Apr 2011 12:33:42 -0400

debhelper (8.1.5) unstable; urgency=low

  * dh_ucf: New command, contributed by Jeroen Schot. Closes: #213078
  * dh_installgsettings: Correct bug in use of find that caused some 
    gsettings files to be missed. Closes: #624377

 -- Joey Hess <joeyh@debian.org>  Wed, 27 Apr 2011 21:33:50 -0400

debhelper (8.1.4) unstable; urgency=low

  * dh_clean: Remove debhelper logs for all packages, including packages
    not being acted on. dh can sometimes produce such logs by accident
    when passed bundled options (like "-Nfoo" instead of "-N foo") that