@@ -2,6 +2,8 @@ debhelper (8.9.1) UNRELEASED; urgency=low
 
   * Typo fixes. Closes: #632662
   * dh: In v9, do not enable any python support commands. Closes: #634106
+  * Now the QT4 version of qmake can be explicitly selected by passing
+    --buildsystem=qmake_qt4. Closes: #566840
 
  -- Joey Hess <joeyh@debian.org>  Mon, 04 Jul 2011 12:16:48 -0400
 
